# OPNsense-config-faker

./: .coverage  .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  COVERAGE.md  Cargo.toml  DEPENDENCIES.md  ELIMINATION_PLAN.md  MIGRATION_VALIDATION_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  WARP.md  codecov.yml  coverage.xml  cspell.config.yaml  deny.toml  dist-workspace.toml  generateXMLConfig.py  generate_csv.py  go.mod  go.sum  go.work  go.work.sum  justfile  main.go  main.py  mise.toml  opnsense-config.xsd  opnsense_config_generator.py  package.json  pnpm-lock.yaml  pydantic.config.xml  pyproject.toml  requirements.txt  (+9 more)
.cursor/rules/: README.mdc  contribution.md  core.md  core.mdc  data-generation.md  documentation.md  opnsense-config-faker.mdc  python-development.mdc  python.md  requirements-management.mdc  testing.md  xsd-model-generation.mdc
.github/: CODEOWNERS  COPILOT_DISABLE.md  README.md  commit-instructions.md  config.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_request.md  bug_report.md  decision_record.md  documentation.md  feature_request.md  task.md
.github/prompts/: code_review.prompt.md  llmstxt.prompt.md  performance_tuning.prompt.md  security_hardening.prompt.md  work_next_task.prompt.md
.github/workflows/: README.md  ci.yml  codeql.yml  codeql2.yml  copilot-setup-steps.yml  coverage.yml  docs.yml  release.yml
benches/: README.md  csv_operations.rs  migration_benchmarks.rs  performance_benchmarks.rs  vlan_generation.rs  xml_generation.rs
benches/_common/: mod.rs
cmd/: root.go
docs/: BENCHMARKING.md  CLI_CONVENTION.md  ERROR_HANDLING.md  GO_REWRITE_SPEC.md  MARKDOWN_FILE_ORGANIZATION_REPORT.md  book.toml  ci-bench-monitoring.md  mermaid-init.js  migration_validation_report.md  post-merge-followups.md  proptest_usage.md
docs/follow-up-issues/: mutation-testing.md  xml-template-coverage.md
docs/github/: GITHUB_MILESTONES_AND_ISSUES.md  TRANSITION_NOTE_UPDATE_COMPLETION.md  TRANSITION_NOTE_UPDATE_GUIDE.md  github-issues-language-migration-analysis.md
docs/src/: SUMMARY.md  introduction.md
fuzz/: Cargo.toml  fuzz.toml
fuzz/fuzz_targets/: csv_parsing.rs  vlan_generation.rs  xml_parsing.rs
internal/errors/: errors.go  errors_test.go
internal/generator/: departments.go  departments_test.go
internal/netutil/: rfc1918.go  rfc1918_test.go
internal/progress/: progress.go
legacy/: README-ENHANCED.md  README-OLD.md  README.md
legacy/opnsense/: escape.py  genCARP.py  genDHCP.py  genInterface.py  genNAT.py  genRadiusUser.py  genRules.py  genUUID+pass.py  genVLAN.py  generateXMLConfig.py  replaceTags.py  replaceTagsString.py  sanitizeDescription.py  string_utils.py
opnsense/factories/: __init__.py  base.py  interface_factory.py
opnsense/generators/: __init__.py  interface_generator.py
opnsense/models/: __init__.py  acls.py  action.py  active_interface.py  active_timeout.py  address.py  adv_dhcp6_authentication_statement_algorithm.py  adv_dhcp6_authentication_statement_authname.py  adv_dhcp6_authentication_statement_protocol.py  adv_dhcp6_authentication_statement_rdm.py  adv_dhcp6_config_advanced.py  adv_dhcp6_config_file_override.py  adv_dhcp6_config_file_override_path.py  adv_dhcp6_id_assoc_statement_address.py  adv_dhcp6_id_assoc_statement_address_enable.py  adv_dhcp6_id_assoc_statement_address_id.py  adv_dhcp6_id_assoc_statement_address_pltime.py  adv_dhcp6_id_assoc_statement_address_vltime.py  adv_dhcp6_id_assoc_statement_prefix.py  adv_dhcp6_id_assoc_statement_prefix_enable.py  adv_dhcp6_id_assoc_statement_prefix_id.py  adv_dhcp6_id_assoc_statement_prefix_pltime.py  adv_dhcp6_id_assoc_statement_prefix_vltime.py  adv_dhcp6_interface_statement_information_only_enable.py  adv_dhcp6_interface_statement_request_options.py  adv_dhcp6_interface_statement_script.py  adv_dhcp6_interface_statement_send_options.py  adv_dhcp6_key_info_statement_expire.py  adv_dhcp6_key_info_statement_keyid.py  adv_dhcp6_key_info_statement_keyname.py  adv_dhcp6_key_info_statement_realm.py  adv_dhcp6_key_info_statement_secret.py  adv_dhcp6_prefix_interface_statement_sla_len.py  adv_dhcp_config_advanced.py  adv_dhcp_config_file_override.py  adv_dhcp_config_file_override_path.py  adv_dhcp_option_modifiers.py  adv_dhcp_pt_backoff_cutoff.py  adv_dhcp_pt_initial_interval.py  adv_dhcp_pt_reboot.py  (+463 more)
output/: README.md
project_spec/: README.md  requirements.md  tasks.md  user_stories.md
rust_migration/: MIGRATION_EXECUTIVE_SUMMARY.md  README.md  RUST_MIGRATION_ROADMAP.md  index.md
rust_migration/analysis/: complexity_assessment.md  rust_component_mapping.md  rust_migration_analysis.md
rust_migration/handoff/: HANDOFF_PACKAGE.md
rust_migration/reference/: DEVELOPMENT_WORKFLOWS.md  MIGRATION_SECTION_2_3_DRAFT.md  SECTION_4_5_DRAFT.md  SECTION_6_7_DRAFT.md  SECTION_8_CONCLUSION_DRAFT.md  migration_task_list.md
rust_migration/strategy/: DEVELOPMENT_EFFORT_ESTIMATES.md  MIGRATION_STRATEGY.md  RISKS_AND_MITIGATIONS.md
scripts/: clean.py  verify_removals.sh  verify_xsd.py
src/: lib.rs  main.rs
src/cli/: error.rs  mod.rs
src/generator/: departments.rs  firewall.rs  mod.rs  nat.rs  performance.rs  vlan.rs  vpn.rs
src/io/: csv.rs  mod.rs
src/model/: error.rs  mod.rs  vlan_error.rs
src/utils/: mod.rs  rfc1918.rs
src/validate/: mod.rs
src/xml/: builder.rs  engine.rs  error.rs  generator.rs  injection.rs  mod.rs  streaming.rs  template.rs
test_with_rules/: firewall_1_rules.csv
tests/: README.md  __init__.py  compatibility_tests.rs  csv_parsing_tests.rs  error_handling.rs  error_validation.rs  extended_scale_validation.rs  integration_cli.rs  integration_tests.rs  migration_validation.rs  performance_validation.rs  proptest_vlan.rs  python_compat.rs  python_reference.py  scale_validation.rs  snapshot_csv.rs  snapshot_tests.rs  snapshot_xml.rs  test_generate_csv.py  test_model_generation.py  xml_engine_integration.rs
tests/common/: mod.rs
tests/snapshots/: snapshot_csv__csv_force_overwrite_stdout.snap  (+36 more)
(+47 files in other folders)
