[package]
name = "opnsense-config-faker"
version = "0.1.0"
edition = "2021"
authors = ["EvilBit Labs <contact@evilbitlabs.com>"]
license = "MIT"
description = "A flexible tool for generating realistic network configuration test data for OPNsense"
repository = "https://github.com/EvilBit-Labs/OPNsense-config-faker"
keywords = ["networking", "testing", "configuration", "data-generation", "opnsense"]
categories = ["command-line-utilities", "development-tools::testing", "network-programming"]
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "opnsense-config-faker"
path = "src/main.rs"

[dependencies]
# CLI framework with derive macros
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"

# Serialization framework 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV handling
csv = "1.3"

# XML processing
quick-xml = { version = "0.36", features = ["serialize"] }

# Networking utilities
ipnet = "2.9"

# Random data generation
rand = { version = "0.8", features = ["small_rng"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date/time utilities
chrono = { version = "0.4", features = ["serde"] }

# Progress indicators for CLI
indicatif = "0.17"

# Terminal styling
console = "0.15"

[dev-dependencies]
# Testing framework
rstest = "0.21"

# Temporary files for testing
tempfile = "3.8"

# CLI testing
assert_cmd = "2.0"

# Property-based testing
proptest = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
pretty_assertions = "1.4"

[[bench]]
name = "vlan_generation"
harness = false

[[bench]]
name = "xml_generation"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[profile.test]
debug = true