[package]
name = "opnsense-config-faker"
version = "0.1.0"
edition = "2024"
authors = ["EvilBit Labs <contact@evilbitlabs.com>"]
license = "Apache-2.0"
description = "A flexible tool for generating realistic network configuration test data for OPNsense"
repository = "https://github.com/EvilBit-Labs/OPNsense-config-faker"
homepage = "https://evilbitlabs.io/OPNsense-config-faker"
keywords = [
    "networking",
    "testing",
    "configuration",
    "data-generation",
    "opnsense",
]
categories = [
    "command-line-utilities",
    "development-tools::testing",
    "network-programming",
]
readme = "README.md"
rust-version = "1.85"
exclude = [
    "/spec",
    "/docs",
    ".",
    "/.kiro",
    "/.cursor",
    "/.vscode",
    "/.github",
    "/.git",
    "/.env.*",
    "*.orig",
]

[[bin]]
name = "opnsense-config-faker"
path = "src/main.rs"

[features]
slow-tests = []
rayon = ["dep:rayon"]

[dependencies]
anyhow = "1.0.100"
bumpalo = "3.14"   # Arena allocation

# CLI framework with derive macros
clap = { version = "4.5.48", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5.58"

# Terminal styling
console = "0.16.1"

# CSV handling
csv = "1.3"
fake = { version = "4.4.0", features = ["derive", "uuid"] }

# Progress indicators for CLI
indicatif = "0.18.0"

# Networking utilities
ipnetwork = "0.21.1"
lazy_static = "1.5.0" # Lazy static initialization
lru = "0.16.3"        # Template caching

# XML processing
quick-xml = { version = "0.38.3", features = ["serialize"] }

# Random data generation
rand = { version = "0.9.2", features = ["small_rng"] }
rand_chacha = "0.9.0"

# Performance optimization dependencies
rayon = { version = "1.11.0", optional = true } # Data parallelism
rustc-hash = "2.1.1"                            # Faster hashing

# Serialization framework
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smallvec = "1.15.1"                                    # Stack-allocated vectors

# Error handling
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
assert_cmd = "=2.0.17"
assert_fs = "1.1.3"
criterion = { version = "0.7.0", features = ["html_reports"] }
insta = { version = "1.43.2", features = ["yaml"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
proptest = "1.8.0"
regex = "1.11.3"
roxmltree = "0.20.0"
rstest = "0.26.1"
temp-env = "0.3.0"
tempfile = "3.23.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "vlan_generation"
harness = false

[[bench]]
name = "xml_generation"
harness = false

[[bench]]
name = "csv_operations"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true

[profile.test]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
